--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,27 @@
-<%= @post.title %> <br>
-<%= @post.content %>
+<div style="text-align: center">
 
-<br>
-<br>
-<%= link_to 'Edit', edit_post_path(@post)  %>
-<%= link_to 'Destroy', post_path(@post), method: :delete, data: {confirm: 'Are you sure you want to delete this post?'}%>
+  <%= @post.created_at.strftime('%A, %B, %d ') %>
+  <br>
+  <br>
+
+  <h2><%= @post.title %></h2> <br>
+
+  <div><%= @post.content %></div>
+
+  <br>
+  <br>
+
+  <%= link_to 'Edit', edit_post_path(@post) %>
+  <%= link_to 'Destroy', post_path(@post), method: :delete, data: {confirm: 'Are you sure you want to delete this post?'} %>
+</div>
+
+<div>
+
+  <!--Facebook-->
+  <a onclick="javascript:window.open
+     ('http://www.facebook.com/sharer.php?u=<%= url_for([@post, {only_path: false}]) %>',
+           '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+    <i class="fa fa-facebook" style="color: red;">Facebook</i>
+  </a>
+  <!--Facebook-->
+</div>
