Added Redcarpet and Pygment.rb for Marcdown

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,7 +13,7 @@
     <br>
     <br>
     <%= f.label :content, 'Writ your article hear'%> <br>
-    <%= f.text_field :content %>
+    <%= f.text_area :content %>
     <br>
     <br>
 
