--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
 
   <h2><%= @post.title %></h2> <br>
 
-  <div><%= @post.content %></div>
+  <div><%= markdown @post.content %></div>
 
   <br>
   <br>
