--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,6 @@
   <%= link_to 'Edit', edit_post_path(@post) %>
   <%= link_to 'Destroy', post_path(@post), method: :delete, data: {confirm: 'Are you sure you want to delete this post?'} %>
 </div>
-
 <div>
 
   <!--Facebook-->
@@ -24,4 +23,6 @@
     <i class="fa fa-facebook" style="color: red;">Facebook</i>
   </a>
   <!--Facebook-->
+  <hr>
+  <div><%= render 'disqus' %></div>
 </div>
